--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -15,8 +15,7 @@
 
 <html>
     <head>
-        <link rel="shortcut icon" href="img/logo">
-        <meta charset="utf-8">
+        <link rel="shortcut icon" href="img/icon.ico">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -65,6 +64,4 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
-    <div class="container theme-showcase" role="main" id="dryves">
         
