--- a/web/WEB-INF/jspf/footer.jspf
+++ b/web/WEB-INF/jspf/footer.jspf
@@ -4,7 +4,7 @@
                 <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
             </footer>
 
-        </div><!-- /.container -->
+        <!-- /.container -->
 
 
         <!-- Bootstrap core JavaScript
