--- a/web/css/less/login.less
+++ b/web/css/less/login.less
@@ -8,11 +8,11 @@ and open the template in the editor.
     Author     : tomasharkema
 */
 
-body {
+/*body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
-}
+}*/
 
 .form-signin {
   max-width: 330px;
