Start with timeline something

--- a/web/css/less/friends.less
+++ b/web/css/less/friends.less
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 .friends {
-    .col-lg-4 {
+    .col-sm-4 {
         margin-bottom:10px;
         text-align: center;
     }
