--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -26,7 +26,7 @@
     </head>
     <!-- NAVBAR
     ================================================== -->
-    <body>
+    <body id="dryves">
         <div class="navbar-wrapper">
             <div class="container">
 
