--- a/web/WEB-INF/jspf/admin/headerAndSidebar.jspf
+++ b/web/WEB-INF/jspf/admin/headerAndSidebar.jspf
@@ -15,30 +15,30 @@
     <title>Dryves - CMS</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/Dryves/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="/Dryves/css/admin/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="/css/admin/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
 
     <!-- Timeline CSS -->
-    <link href="/Dryves/css/admin/plugins/timeline.css" rel="stylesheet">
+    <link href="/css/admin/plugins/timeline.css" rel="stylesheet">
 
     <c:choose>
         <c:when test="${fn:endsWith(pageContext.request.requestURI, 'events/') ||
                         fn:endsWith(pageContext.request.requestURI, 'events/index.jsp')}">
     <!-- DataTables CSS -->
-    <link href="/Dryves/css/admin/plugins/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="/css/admin/plugins/dataTables.bootstrap.css" rel="stylesheet">
         </c:when>
     </c:choose>
 
     <!-- Custom CSS -->
-    <link href="/Dryves/css/admin/sb-admin-2.css" rel="stylesheet">
+    <link href="/css/admin/sb-admin-2.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="/Dryves/css/admin/plugins/morris.css" rel="stylesheet">
+    <link href="/css/admin/plugins/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/Dryves/fonts/admin/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/fonts/admin/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +48,7 @@
     <![endif]-->
 
     <!-- Custom Dryves CSS -->
-    <link href="/Dryves/css/admin/custom.css" rel="stylesheet">
+    <link href="/css/admin/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -293,16 +293,16 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a class="active" href="/Dryves/admin/index.jsp"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a class="active" href="/admin/index.jsp"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href="/Dryves/admin/events"><i class="fa fa-table fa-fw"></i> Events</a>
+                            <a href="/admin/events"><i class="fa fa-table fa-fw"></i> Events</a>
                         </li>
                         <li>
-                            <a href="/Dryves/admin/users"><i class="fa fa-table fa-fw"></i> Users</a>
+                            <a href="/admin/users"><i class="fa fa-table fa-fw"></i> Users</a>
                         </li>
                         <li>
-                            <a href="/Dryves/admin/statistics"><i class="fa fa-table fa-fw"></i> Statistics</a>
+                            <a href="/admin/statistics"><i class="fa fa-table fa-fw"></i> Statistics</a>
                         </li>
                         <li>
                             <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
