Some more visuals

--- a/web/css/less/dryves.less
+++ b/web/css/less/dryves.less
@@ -1,3 +1,24 @@
+/*
+ * Some helper classes
+ */
+
 .emptyHeader {
     height:100px;
+}
+
+.bg {
+    position:fixed;
+    top:0;
+    left:0;
+    right:0;
+    height:250px;
+    z-index: -100;
+    background-position: center;
+    background-size: cover;
+}
+
+footer {
+    position:fixed;
+    bottom:0;
+    width: 100%;
 }
