--- a/web/css/less/dryves.less
+++ b/web/css/less/dryves.less
@@ -7,7 +7,7 @@
 }
 
 .bg {
-    position:fixed;
+    position:absolute;
     top:0;
     left:0;
     right:0;
@@ -21,4 +21,8 @@ footer {
     position:fixed;
     bottom:0;
     width: 100%;
+}
+
+.offset {
+    margin-top:150px;
 }
