Location overview and possibility to add.

--- a/web/WEB-INF/jspf/admin/headerAndSidebar.jspf
+++ b/web/WEB-INF/jspf/admin/headerAndSidebar.jspf
@@ -306,7 +306,7 @@
                             <a href="/admin/statistics"><i class="fa fa-table fa-fw"></i> Statistics</a>
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
+                            <a href="/admin/locations"><i class="fa fa-table fa-fw"></i> Locations</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
