--- a/web/css/less/dryves.less
+++ b/web/css/less/dryves.less
@@ -6,7 +6,7 @@
     height:100px;
 }
 
-.bg {
+.backdrop {
     position:absolute;
     top:0;
     left:0;
@@ -15,6 +15,7 @@
     z-index: -100;
     background-position: center;
     background-size: cover;
+    box-shadow: 0px -40px 100px 0px black inset;
 }
 
 footer {
