--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -57,7 +57,7 @@
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="/">Home</a></li>
                                 <c:choose>
-                                    <c:when test="${userId == 0 || userId == null}">
+                                    <c:when test="${userId == null}">
                                         <li><a href="/login.jsp">Login</a></li>
                                     </c:when>
                                     <c:otherwise>
