--- a/web/css/less/event.less
+++ b/web/css/less/event.less
@@ -27,7 +27,7 @@ and open the template in the editor.
         margin-right:20px;
     }
     
-    .rsvp {
+    .rsvp, .logintojoin {
         margin-top:60px;
     }
 }
