--- a/web/css/less/event.less
+++ b/web/css/less/event.less
@@ -29,7 +29,19 @@ and open the template in the editor.
     }
     
     .rsvp, .logintojoin {
-        margin-top:60px;
+        margin-top: 60px;
+        margin-left: 10px;
+    }
+
+    .messages {
+        .avatar img {
+            width:50px;
+            height:50px;
+            margin-right:10px;
+        }
+        h4 {
+            margin-top: 2px;
+        }
     }
 
     .info {
@@ -47,10 +59,21 @@ and open the template in the editor.
         }
 
         .friend-avatars {
+
+            margin-bottom: 10px;
+            margin-top: 10px;
+            width: 100%;
+            overflow: hidden;
+            height:50px;
+
             img {
                 max-width:50px;
                 max-height:50px;
             }
+        }
+
+        .list-group-item {
+            padding: 15px 15px;
         }
     }
 }
