search event overview

--- a/web/css/less/event.less
+++ b/web/css/less/event.less
@@ -8,6 +8,23 @@ and open the template in the editor.
     Author     : tomas
 */
 
+.events {
+    .event-ava {
+        width:150px;
+        margin-right:20px;
+    }
+
+    .events-list {
+        .list-group-item {
+            min-height: 175px;
+        }
+    }
+
+    .search-events {
+        margin-bottom: 10px;
+    }
+}
+
 .event {
     
     padding-top: 90px;
