--- a/web/WEB-INF/jspf/admin/footer.jspf
+++ b/web/WEB-INF/jspf/admin/footer.jspf
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/lib/dependencies/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="/js/admin/plugins/metisMenu/metisMenu.min.js"></script>
