--- a/web/css/less/dryves.less
+++ b/web/css/less/dryves.less
@@ -57,3 +57,9 @@ footer {
 .offset {
     margin-top:150px;
 }
+
+.letter-header {
+    background-color: #EEE;
+    padding: 1px;
+    padding-left: 10px;
+}
