Create some helper methods. Show if is driving or if is passenger. Show passengers

--- a/web/css/less/dryves.less
+++ b/web/css/less/dryves.less
@@ -12,7 +12,9 @@ html, body {
 .match-parent {
     min-height: 100%;
 }
-
+.media-body {
+    width: 100%;
+}
 .avatar {
     
     margin-bottom:20px;
