Some layout enhancements

--- a/web/css/less/search.less
+++ b/web/css/less/search.less
@@ -5,13 +5,26 @@
   padding-top: 49px;
   z-index: -1;
 
-  .search-res {
-    display: block;
-    color:#5A5A5A;
+  border: 1px #e7e7e7 solid;
+  border-top: none;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 
-    img {
-      height:50px;
-      float:left;
+  .search-results {
+
+    div+small {
+      padding-top: 20px;
+      display: block;
+    }
+
+    .search-res {
+      display: block;
+      color: #5A5A5A;
+
+      img {
+        height: 50px;
+        float: left;
+      }
     }
   }
 }
